Modifications to run tests with NuoDB

--- a/gradle/databases.gradle
+++ b/gradle/databases.gradle
@@ -376,6 +376,15 @@ ext {
                         'jdbc.url'   : 'jdbc:Altibase://' + dbHost + ':20300/mydb?force_clob_bind=true',
                         'jdbc.datasource' : 'Altibase.jdbc.driver.AltibaseDriver'
                 ],
+                nuodb : [
+                        'db.dialect' : 'com.nuodb.hibernate.NuoDBDialect',
+                        'jdbc.driver': 'com.nuodb.hibernate.NuoHibernateDriver',
+                        'jdbc.user'  : 'hibernate_orm_test',
+                        'jdbc.pass'  : 'hibernate_orm_test',
+                        'connection.init_sql' : '',
+                        'jdbc.url'   : 'jdbc:com.nuodb.hib://' + dbHost + '/hibernate_orm_test?isolation=read_committed&lock-wait-timeout=10',
+                        'jdbc.datasource' : 'com.nuodb.jdbc.Driver'
+                ],
         ]
 }
 
