--- a/hibernate-core/src/test/resources/hibernate.properties
+++ b/hibernate-core/src/test/resources/hibernate.properties
@@ -16,6 +16,9 @@ hibernate.connection.autocommit false
 hibernate.connection.initial_pool_size 0
 hibernate.connection.pool_size 5
 
+# NUODB: Match default of most RDBMS
+hibernate.connection.isolation=READ_COMMITTED
+
 hibernate.show_sql true
 hibernate.format_sql true
 hibernate.highlight_sql true
