Modifications to run tests with NuoDB

--- a/hibernate-testing/hibernate-testing.gradle
+++ b/hibernate-testing/hibernate-testing.gradle
@@ -9,6 +9,13 @@ description = 'Support for testing Hibernate ORM functionality'
 
 apply from: rootProject.file( 'gradle/published-java-module.gradle' )
 
+// BEGIN: For NUODB - search local repo also
+repositories {
+	mavenCentral()
+    mavenLocal()
+}
+// END: For NUODB
+
 dependencies {
     api project( ':hibernate-core' )
     api project( ':hibernate-community-dialects' )
@@ -39,6 +46,11 @@ dependencies {
     api 'org.javamoney:moneta:1.1'
 
     api testLibs.log4j2
+
+// BEGIN: For NUODB
+    implementation    "com.nuodb.jdbc:nuodb-jdbc:${nuodbJdbcJarVersion}"
+    implementation    "com.nuodb.hibernate:nuodb-hibernate:${nuodbHibernateJarVersion}"
+// END: For NUODB
 
     implementation libs.hcann
     implementation libs.jandex
