--- a/gradle/databases.gradle
+++ b/gradle/databases.gradle
@@ -376,6 +376,7 @@ ext {
                         'jdbc.url'   : 'jdbc:Altibase://' + dbHost + ':20300/mydb?force_clob_bind=true',
                         'jdbc.datasource' : 'Altibase.jdbc.driver.AltibaseDriver'
                 ],
+                // NUODB
                 nuodb : [
                         'db.dialect' : 'com.nuodb.hibernate.NuoDBDialect',
                         'jdbc.driver': 'com.nuodb.hibernate.NuoHibernateDriver',
