--- a/hibernate-testing/hibernate-testing.gradle
+++ b/hibernate-testing/hibernate-testing.gradle
@@ -9,6 +9,25 @@ description = 'Support for testing Hibernate ORM functionality'
 
 apply from: rootProject.file( 'gradle/published-java-module.gradle' )
 
+// BEGIN: For NUODB - search local repo also for the deps below.
+repositories {
+	mavenCentral()
+    //mavenLocal() // Using this, gradle can't find hibernate-core dependency
+    flatDir {
+        dirs "${System.getProperty('user.home')}/.m2/repository/com/nuodb/hibernate/nuodb-hibernate/${nuodbHibernateJarVersion}"
+    }
+}
+// END: For NUODB
+
+// test {
+//     filter {
+//         excludeTestsMatching 'org.hibernate.testing.annotations.BasicEntityManagerFactoryScopeTests'
+//         excludeTestsMatching 'org.hibernate.testing.annotations.BasicSessionFactoryScopeTests'
+//         excludeTestsMatching 'org.hibernate.testing.annotations.methods.DomainModelTesting'
+//         excludeTestsMatching 'org.hibernate.testing.annotations.methods.SessionFactoryTesting'
+//     }
+// }
+
 dependencies {
     api project( ':hibernate-core' )
 
@@ -38,6 +57,11 @@ dependencies {
     api 'org.javamoney:moneta:1.1'
 
     api testLibs.log4j2
+
+// BEGIN: For NUODB
+    implementation    "com.nuodb.jdbc:nuodb-jdbc:${nuodbJdbcJarVersion}"
+    implementation    "com.nuodb.hibernate:nuodb-hibernate:${nuodbHibernateJarVersion}"
+// END: For NUODB
 
     implementation libs.hcann
     implementation libs.jandex
