--- a/hibernate-testing/hibernate-testing.gradle
+++ b/hibernate-testing/hibernate-testing.gradle
@@ -9,7 +9,7 @@ description = 'Support for testing Hibernate ORM functionality'
 
 apply from: rootProject.file( 'gradle/published-java-module.gradle' )
 
-// BEGIN: For NUODB - search local repo also
+// BEGIN: For NUODB - search local repo also for the deps below.
 repositories {
 	mavenCentral()
     mavenLocal()
